--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "gmc",
+  "name": "gmc_website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.12",
-    "@types/react": "^16.9.13",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router-dom": "^5.1.3",
-    "nodemon": "^2.0.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "typescript": "^3.7.2"
+    "react-scripts": "3.3.0",
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
