--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "predeploy": "yarn build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
