--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
-    "@types/reactstrap": "^8.2.0",
     "@types/styled-components": "^4.4.1",
     "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "reactstrap": "^8.2.0",
+    "reactjs-popup": "^1.5.0",
     "styled-components": "^4.4.1",
     "typescript": "~3.7.2"
   },
