--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mianzegregory.github.io/GMC_Website",
+  "homepage": "https://mianzegregory.github.io/gmc",
   "name": "gmc_website",
   "version": "0.1.0",
   "private": true,
